<resources>
    <string name="app_name">Muslim Memo</string>


    <string name="navigation_item_1">First</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_heading">Muslim Memo</string>
    <string name="about">About</string>
    <string name="contribute">Contribute</string>
    <string name="ask">Ask</string>
    <string name="discuss">Forums</string>
    <string name="contact">Contact</string>
    <string name="home">Muslim Memo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="web">Visit Web Version</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_full_content">FullContent</string>


</resources>
